# gzs_renew

./: .gitignore  CMakeLists.txt  README.md  howTo.txt
auxiliary/: Calibr.str  Combo.str  Table.cfg
inc/: auxil.h  calcmixture.h  calibrtable.h  clibinc.h  coefftable.h  combotable.h  crates.h  i87000_lnx.h  master.h  monitoring.h  mtime.h  mycppobject.h  params.h  serial.h  simpletable.h  slider.h  station.h  trackBar.h  wfiles.h
lib/: libi7k.so.1  libi7k.so.1.0  libi7k_64.so.1  libi7k_arm.so.1  libi7k_arm.so.1.0
lib/include/: i7k.h  sio.h
qml/: Calibr1.qml  CalibrMaster.qml  Choose_2.qml  Chooser_1.qml  Gview.qml  Gview2.qml  MergeColumn.qml  MergedColumns2.qml  MergedColumns3.qml  MergedColumns4.qml  MergedColumns5.qml  Plot1.qml  Plot2.qml  RadioB.qml  Scroll_1.qml  SimpleTable.qml  Simple_background.qml  TableCalibr.qml  TableCalibr3.qml  TableCombo.qml  TableCombo2.qml  TableHeader.qml  TableSimple.qml  WorkParams.qml  main.qml  main_5.qml  qml.qrc  qml_5.qrc
src/: calcmixture.cpp  calibrtable.cpp  coefftable.cpp  combotable.cpp  crates.cpp  i87000_lnx.c  i87000_lnx.cpp  main.cpp  master.cpp  monitoring.cpp  mtime.cpp  mycppobject.cpp  params.cpp  serial.cpp  serial.h  simpletable.cpp  station.cpp  tableModel.cpp  trackBar.cpp  wfiles.cpp
